<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name_et"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:rotation="-20"
            android:text="@string/sale_30_tv"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:text="@string/select_item"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <ImageView
        android:id="@+id/goods_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/order_price"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_title_tv"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_title_tv"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/price_tv"
            android:text="@string/dollars"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantity_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_toRightOf="@+id/price_title_tv"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minus_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/quantity_title_tv"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            android:onClick="decreaseQuantity"/>

        <TextView
            android:id="@+id/quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_title_tv"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/minus_bt"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/quantity_title_tv"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/quantity_tv"
            android:background="@color/colorPrimaryDark"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:onClick="increaseQuantity"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_to_card"
        android:textColor="@android:color/white"
        android:onClick="addToCart"/>


</LinearLayout>